--- a/app/src/main/res/layout/fragment_post_video.xml
+++ b/app/src/main/res/layout/fragment_post_video.xml
@@ -74,56 +74,30 @@
             android:id="@+id/description_text"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_marginEnd="6dp"
             android:layout_marginStart="4dp"
-            android:layout_marginBottom="2dp"
+            android:layout_marginEnd="6dp"
             android:background="@android:color/white"
             android:ems="10"
-            android:text="@={viewModel.liveDescription}"
             android:hint="@string/describe_your_audio"
             android:inputType="text"
             android:maxLength="150"
+            android:text="@={viewModel.liveDescription}"
             android:textColor="@color/dark_black"
             android:textColorHint="@color/medium_grey"
-            app:layout_constraintBottom_toTopOf="@+id/hashtag_btn"
+            app:layout_constraintBottom_toBottomOf="@+id/video_thumbnail"
             app:layout_constraintEnd_toStartOf="@+id/video_thumbnail"
             app:layout_constraintStart_toStartOf="@+id/back_btn"
             app:layout_constraintTop_toTopOf="@+id/video_thumbnail" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/hashtag_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="4dp"
-            android:text="@string/hashtags"
-            android:textAllCaps="false"
-            app:backgroundTint="@android:color/white"
-            app:cornerRadius="4dp"
-            app:layout_constraintBottom_toBottomOf="@+id/video_thumbnail"
-            app:layout_constraintStart_toStartOf="@+id/description_text" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/friends_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:padding="4dp"
-            android:text="@string/friends"
-            android:textAllCaps="false"
-            app:backgroundTint="@android:color/white"
-            app:cornerRadius="4dp"
-            app:layout_constraintBottom_toBottomOf="@+id/video_thumbnail"
-            app:layout_constraintStart_toEndOf="@+id/hashtag_btn" />
 
         <View
             android:id="@+id/line"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:layout_marginTop="12dp"
             android:background="@color/light_grey"
+            app:layout_constraintBottom_toTopOf="@+id/description_text"
             app:layout_constraintEnd_toEndOf="@+id/video_thumbnail"
-            app:layout_constraintStart_toStartOf="@+id/hashtag_btn"
-            app:layout_constraintTop_toBottomOf="@+id/friends_btn" />
+            app:layout_constraintStart_toStartOf="@+id/description_text" />
 
         <Button
             android:id="@+id/post_btn"
