--- a/app/src/main/res/layout/fragment_profile_without_account.xml
+++ b/app/src/main/res/layout/fragment_profile_without_account.xml
@@ -13,29 +13,6 @@
         android:background="@android:color/white"
         tools:context=".presentation.ui.profile.without_account.ProfileWithoutAccountFragment">
 
-        <!--    <TextView-->
-        <!--        android:id="@+id/text_home"-->
-        <!--        android:layout_width="match_parent"-->
-        <!--        android:layout_height="wrap_content"-->
-        <!--        android:layout_marginStart="8dp"-->
-        <!--        android:layout_marginTop="8dp"-->
-        <!--        android:layout_marginEnd="8dp"-->
-        <!--        android:gravity="center_horizontal"-->
-        <!--        android:textAlignment="center"-->
-        <!--        android:textSize="20sp"-->
-        <!--        app:layout_constraintEnd_toEndOf="parent"-->
-        <!--        app:layout_constraintStart_toStartOf="parent"-->
-        <!--        app:layout_constraintTop_toTopOf="parent" />-->
-
-        <!--    <com.facebook.login.widget.LoginButton-->
-        <!--        android:id="@+id/login_button"-->
-        <!--        android:layout_width="wrap_content"-->
-        <!--        android:layout_height="wrap_content"-->
-        <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--        app:layout_constraintEnd_toEndOf="parent"-->
-        <!--        app:layout_constraintStart_toStartOf="parent"-->
-        <!--        app:layout_constraintTop_toTopOf="parent" />-->
-
         <ImageView
             android:id="@+id/sign_up_dummy_image"
             android:layout_width="80dp"
@@ -53,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="6dp"
             android:fontFamily="@font/cabin_medium"
-            android:text="@string/sign_up_for_an_account"
+            android:text="Auth"
             app:layout_constraintBottom_toTopOf="@+id/sign_up_btn"
             app:layout_constraintEnd_toEndOf="@+id/sign_up_dummy_image"
             app:layout_constraintStart_toStartOf="@+id/sign_up_dummy_image"
@@ -67,7 +44,7 @@
             android:layout_marginTop="50dp"
             app:backgroundTint="@color/pinkBtnBackground"
             android:fontFamily="sans-serif-medium"
-            android:text="Sign Up"
+            android:text="Authentication"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
             app:layout_constraintEnd_toEndOf="@+id/sign_up_dummy_image"
