--- a/app/src/main/res/layout/one_to_one_chat_fragment.xml
+++ b/app/src/main/res/layout/one_to_one_chat_fragment.xml
@@ -4,7 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.ui.chat.OneToOneChatFragment">
+        tools:context=".presentation.ui.chat.one_to_one_chat.OneToOneChatFragment">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/chatRecyclerView"
